--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "dependencies": {
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-scripts": "1.0.14"
+    "react-icon-base": "^2.1.1",
+    "react-motion": "^0.5.2",
+    "react-scripts": "1.0.14",
+    "react-stripe-elements": "^1.2.0",
+    "react-transition-group": "1.x"
   },
   "scripts": {
     "start": "react-scripts start",
