--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "react-dom": "^16.0.0",
     "react-icon-base": "^2.1.1",
     "react-motion": "^0.5.2",
-    "react-scripts": "1.0.14",
+    "react-phone-number-input": "^0.15.2",
+    "react-scripts": "^1.0.14",
     "react-stripe-elements": "^1.2.0",
-    "react-transition-group": "1.x"
+    "react-transition-group": "^1.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
