--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-icon-base": "^2.1.1",
+    "react-measure": "^2.0.2",
     "react-motion": "^0.5.2",
     "react-phone-number-input": "^0.15.2",
     "react-scripts": "^1.0.14",
@@ -17,5 +18,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "postcss-loader": "^2.0.8"
   }
 }
